@@ -12,7 +12,7 @@ libfrontend_a_SOURCES=occampi_fe.c occampi_lexer.c occampi_parser.c occampi_prim
 		occampi_snode.c occampi_decl.c occampi_type.c occampi_action.c occampi_lit.c \
 		occampi_instance.c occampi_dtype.c occampi_oper.c occampi_function.c occampi_mobiles.c \
 		occampi_initial.c occampi_asm.c occampi_traces.c occampi_mwsync.c \
-		mcsp_fe.c mcsp_lexer.c mcsp_parser.c mcsp_process.c mcsp_snode.c mcsp_oper.c \
+		mcsp_fe.c mcsp_lexer.c mcsp_parser.c mcsp_process.c mcsp_snode.c mcsp_oper.c mcsp_decl.c \
 		rcxb_fe.c rcxb_lexer.c rcxb_parser.c rcxb_program.c \
 		mwsync.c
 
