@@ -1,4 +1,6 @@
 
+02/08/2006	frmb	split some of the MCSP code into separate front-end files
+01/08/2006	frmb	fixed some bugs in the handling of channel direction specifiers and parallel usage checker
 28/08/2006	frmb	more work on occam-pi ALTs
 27/08/2006	frmb	various updates to multiway synchronisation handling
 20/08/2006	frmb	separated out new multiway synchronisation code into mysync.c
